fix card collapse btn

--- a/ui/less/com/msg-view/card.less
+++ b/ui/less/com/msg-view/card.less
@@ -32,9 +32,6 @@
 
     .header-left {
       flex: 1;
-      .date {
-        font-weight: 200;
-      }
     }
     .header-right {
       white-space: pre;
@@ -51,6 +48,13 @@
       a {
         color: #8694a7;
       }
+    }
+    .date {
+      font-weight: 200;
+    }
+    .collapse-btn {
+      margin: 0 15px;
+      padding: 5px;
     }
   }
   .body {
@@ -116,18 +120,6 @@
     }
     .ctrls {
       display: none;
-    }
-  }
-  &.collapsable .header {
-    cursor: pointer;
-    &:hover {
-      background: #fdfdfd;
-      &:before {
-        content: 'collapse';
-        position: absolute;
-        left: 50%;
-        color: #bbb;
-      }
     }
   }
 
